# livereload-demo

./: Cargo.toml  Readme.md  init.sh
src/: main.rs  state.rs
templates/: base.jinja  index.jinja
