[package]
name = "livereload_step"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
axum = { version = "0.6.15", features = ["tokio"] }
axum-macros = "0.3.7"
futures-core = "0.3.28"
minijinja = { version = "0.31.1", features = ["source"] }
minijinja-autoreload = "0.31.1"
notify = "5.1.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
